Accidentally included a Java 9 feature. Replaced with proper method.